# ChangeLog for dev-perl/Readonly-XS
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Readonly-XS/ChangeLog,v 1.8 2013/10/06 13:39:24 zlogene Exp $

  06 Oct 2013; Mikle Kolyada <zlogene@gentoo.org> Readonly-XS-1.50.0.ebuild:
  added ~sparc keyword wrt bug #484458

  16 Sep 2013; Mikle Kolyada <zlogene@gentoo.org> Readonly-XS-1.50.0.ebuild:
  added ~ia64 keyword wrt bug #484458

  13 Sep 2013; Mikle Kolyada <zlogene@gentoo.org> Readonly-XS-1.50.0.ebuild:
  added ~alpha keyword wrt bug #484458

  10 Sep 2013; Jeroen Roovers <jer@gentoo.org> Readonly-XS-1.50.0.ebuild:
  Marked ~hppa (bug #484458).

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Readonly-XS-1.05.ebuild:
  Cleanup

*Readonly-XS-1.50.0 (29 Aug 2011)

  29 Aug 2011; Torsten Veller <tove@gentoo.org> +Readonly-XS-1.50.0.ebuild:
  Change version scheme

*Readonly-XS-1.05 (10 Apr 2010)

  10 Apr 2010; Torsten Veller <tove@gentoo.org> +Readonly-XS-1.05.ebuild,
  +metadata.xml:
  Initial commit for Padre