@@ -2,15 +2,15 @@
 Hash: SHA256
 
 DIST Readonly-XS-1.05.tar.gz 8849 SHA256 8ae5c4e85299e5c8bddd1b196f2eea38f00709e0dc0cb60454dc9114ae3fff0d SHA512 0e3a8e55e7776e556b7ce995510d73d8d07b51a98f3d4772c291f4c76134c395b196a0485a6ceca39acd536258da5c91cddfdf3f61ef3309c518c807bb0f4dd4 WHIRLPOOL 0d14689348cda6d53ab9d73d8b57fe694dd4ec81c3253ba57372b79e1a0296fad25371e5b4ca76ccc6c4312b1649cfd5ab0ef598454f5aea12fc0d0ba35d5e95
-EBUILD Readonly-XS-1.50.0.ebuild 515 SHA256 5e0379e6dfac0b7e5cc154474524f6a7cc880033c6471cb4365ab5fdd4f2d935 SHA512 7dabe26f101b4d826145a07f17d6c865d45349c83040069539d692bf37c377cde2b26b21bd7ae6196178d7c45bff391a08434e49962ada34008ebb9cd19726bd WHIRLPOOL 77f58d01aa195dc034f0270dd48fb56339abf289a7f3f31caf8450e2b821ecff1da80d9d4913c8614e73b0a49a0d9a42be36f48d8efcdcdf2d08a51a521705ca
-MISC ChangeLog 1132 SHA256 b7845ae2ae02cb87562dbd1dedf3704927f7bbbbf838930bf587ff82f5fbd675 SHA512 5cede8eb0fffa2cadf9dd502fccfe4ccb035ebcc7aecdb7dee9d00c2b11ad1ec32f226cb752dd53f8c859c8fa2eaa7be53b9f94fab277a2f4c6838efbd90a2f1 WHIRLPOOL 39fc61984ebd91cb7f783ee8342b54374b831e396bf5b6ec670cd59a6cac17257ca34828e20c9cb6c40e9f219f91f4fa0cf0a0fa80abc395345fd8e1e03b4c6c
+EBUILD Readonly-XS-1.50.0.ebuild 520 SHA256 6616fd79ec99ceaa3c47d47a029231e44bab47839d40a26be1d56030e36a2863 SHA512 ee6f10af6e581dc7efeb2571ea0c7daa17499cb67b69f31396b80ec0d30028f97ab812eb0969f11fbe547a8b799308e8c103c9818e611a9330bd781f9b4d3eb7 WHIRLPOOL f4191491c246de51db33255f9fbf64c5239c5ab5c17522d20261ac03a73f527b51c204ca6d5147706d08e978bb3c9d2cfc6bc11216fcdc88f8a885d78b68aec5
+MISC ChangeLog 1247 SHA256 d5c55943c4c4bbeca2069b46ca99210b6c216b4c4ce0b899d586c661ce971be7 SHA512 23b0983e91b2e48ec76afbba1c36bd68f5e959b48c00f3e5993ac952f6617205c9f47d8e7064b018d12b75b3681a49bb8cdb533955e8da96f7e4196ddb0061b6 WHIRLPOOL 05674bec2d77461d685d027c4e794ad964501ba7ec6fe915aecc021019c0ee20e378c5e0759b06a63d2c80650afb64233efe5cbc3c50d1bcc4a5246e28c838b7
 MISC metadata.xml 296 SHA256 bbde3f6f06d3c65a29aa028e3aa2888198469ac9a026df49a642c2dfc227e28f SHA512 32cfd05e55fa00a7f5a37364cc9e23734e9ba7a1c61467346767c4dd1b4c75077461112498452f2b0438f6d92a1c5f889e099f9cfe939815b26f745993ff4e63 WHIRLPOOL 5eac40e7df7480418038d89b3fb54cedfd162631d11bcf5ee3b619146f2bd46544fb3099fbe3c2cf502a85d6c0930657c96df0615c32247eedbc29c5da237413
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iJwEAQEIAAYFAlJRaM0ACgkQG9wOWsQutda14QQAggkyyOnl/KshfRHRfbS+GmoY
-o7ThqzNWLbjk/AEjq0hDjxv0/uzd9bVNhU6r0rWKGODoRcrgnwhhITeisFuy3bRF
-RvbK324gUtDOQQOfJyU5XyWpiNnxegkVd8L7BGKGln1aYaYTet9g2AcSkXMHIp+K
-G+EKFPA3GyMF4LYG/fs=
-=LNBa
+iJwEAQEIAAYFAlJRjLoACgkQG9wOWsQutdaFbgP/Rt9zL9/D7jMWKwn/GeanQTiO
+/6zTdwPlEhJ3ReyEZbi8VK0Mr6ydspqyjAddDyRBuEZn6A/dmgfIaf4A+5BBfShQ
+WJDeL3SCFckGCYjql4wrV7Y/domSTNkzAgQ9PJS/Xq6c7mQlWrlZf9mGHuZgZndo
+OXB5FneY79ewemICKtc=
+=Unid
 -----END PGP SIGNATURE-----
