@@ -3,10 +3,10 @@ DEPEND=dev-perl/Readonly || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
 DESCRIPTION=Companion module for Readonly.pm, to speed up read-only scalar variables
 EAPI=4
 HOMEPAGE=http://search.cpan.org/dist/Readonly-XS/
-KEYWORDS=~alpha ~amd64 ~hppa ~ia64 ~sparc ~x86
+KEYWORDS=~alpha ~amd64 ~hppa ~ia64 ~ppc ~sparc ~x86
 LICENSE=|| ( Artistic GPL-1 GPL-2 GPL-3 )
 RDEPEND=dev-perl/Readonly || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
 SLOT=0
 SRC_URI=mirror://cpan/authors/id/R/RO/ROODE/Readonly-XS-1.05.tar.gz
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	perl-module	d93571ca1c77e98760e5aa406388b02d	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=5239cddfee2721327227a1c66d902031
+_md5_=1061979f97242814c306e34697974203
