@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Readonly-XS
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Readonly-XS/ChangeLog,v 1.8 2013/10/06 13:39:24 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Readonly-XS/ChangeLog,v 1.9 2013/10/06 16:12:42 zlogene Exp $
+
+  06 Oct 2013; Mikle Kolyada <zlogene@gentoo.org> Readonly-XS-1.50.0.ebuild:
+  added ~ppc keyword wrt bug #484458
 
   06 Oct 2013; Mikle Kolyada <zlogene@gentoo.org> Readonly-XS-1.50.0.ebuild:
   added ~sparc keyword wrt bug #484458
